test/src/fcusparse.h

typedef struct d_CSRGDeviceMat
{			
  cusparseMatDescr_t descr;
  cusparseSolveAnalysisInfo_t triang;
  int                 m, n, nz;
  double             *val;
  int                *irp;
  int                *ja;
} d_CSRGDeviceMat;
typedef struct s_CSRGDeviceMat
{			
  cusparseMatDescr_t descr;
  cusparseSolveAnalysisInfo_t triang;
  int                 m, n, nz;
  float              *val;
  int                *irp;
  int                *ja;
} s_CSRGDeviceMat;
/* Interoperability: type coming from Fortran side to distinguish D/S/C/Z. */
typedef struct s_Cmat
{
  s_CSRGDeviceMat *mat;
} s_Cmat;
typedef struct d_Cmat
{
  d_CSRGDeviceMat *mat;
} d_Cmat;
typedef struct s_HYBGDeviceMat
{			
  cusparseMatDescr_t descr;
  cusparseSolveAnalysisInfo_t triang;
  cusparseHybMat_t hybA;
  int                m, n, nz;
  float             *val;
  int               *irp;
  int               *ja;
} s_HYBGDeviceMat;
typedef struct d_HYBGDeviceMat
{			
  cusparseMatDescr_t descr;
  cusparseSolveAnalysisInfo_t triang;
  cusparseHybMat_t hybA;
  int                 m, n, nz;
  double             *val;
  int                *irp;
  int                *ja;
} d_HYBGDeviceMat;
/* Interoperability: type coming from Fortran side to distinguish D/S/C/Z. */
typedef struct s_Hmat
{
  s_HYBGDeviceMat *mat;
} s_Hmat;
typedef struct d_Hmat
{
  d_HYBGDeviceMat *mat;
} d_Hmat;
int FcusparseCreate(void **context);
int FcusparseDestroy(void **context);
int s_CSRGDevice2Host(s_Cmat *Mat, int m, int n, int nz,
		      int *irp, int *ja, float *val);
int s_HYBGDeviceFree(s_Hmat *Matrix);
int s_spmvHYBGDevice(s_Hmat *Matrix, float alpha, void *deviceX,
		     float beta, void *deviceY);
int s_HYBGDeviceAlloc(s_Hmat *Matrix,int nr, int nc, int nz);
int s_HYBGDeviceSetMatDiagType(s_Hmat *Matrix, int type);
int s_HYBGDeviceSetMatIndexBase(s_Hmat *Matrix, int type);
int s_HYBGDeviceSetMatType(s_Hmat *Matrix, int type);
int s_HYBGDeviceSetMatFillMode(s_Hmat *Matrix, int type);
int s_HYBGDeviceHybsmAnalysis(s_Hmat *Matrix);
int s_spsvHYBGDevice(s_Hmat *Matrix, float alpha, void *deviceX,
		     float beta, void *deviceY);
int s_HYBGHost2Device(s_Hmat *Matrix, int m, int n, int nz,
			  int *irp, int *ja, float *val);
int d_CSRGDevice2Host(d_Cmat *Mat, int m, int n, int nz,
		      int *irp, int *ja, double *val);
int d_HYBGDeviceFree(d_Hmat *Matrix);
int d_spmvHYBGDevice(d_Hmat *Matrix, double alpha, void *deviceX,
		     double beta, void *deviceY);
int d_HYBGDeviceAlloc(d_Hmat *Matrix,int nr, int nc, int nz);
int d_HYBGDeviceSetMatDiagType(d_Hmat *Matrix, int type);
int d_HYBGDeviceSetMatIndexBase(d_Hmat *Matrix, int type);
int d_HYBGDeviceSetMatType(d_Hmat *Matrix, int type);
int d_HYBGDeviceSetMatFillMode(d_Hmat *Matrix, int type);
int d_HYBGDeviceHybsmAnalysis(d_Hmat *Matrix);
int d_spsvHYBGDevice(d_Hmat *Matrix, double alpha, void *deviceX,
		     double beta, void *deviceY);
int d_HYBGHost2Device(d_Hmat *Matrix, int m, int n, int nz,
			  int *irp, int *ja, double *val);