gpu/cusparse_mod.F90


  interface CSRGDevice2Host
     function s_CSRGDevice2Host(Mat,m,n,nz,irp,ja,val) &
         &  bind(c,name="s_CSRGDevice2Host") result(res)
      use iso_c_binding
      import  s_Cmat
      type(s_Cmat)          :: Mat
      integer(c_int), value :: m,n,nz
      integer(c_int)        :: irp(*), ja(*)
      real(c_float)         :: val(*)
      integer(c_int)        :: res
    end function s_CSRGDevice2Host
    function d_CSRGDevice2Host(Mat,m,n,nz,irp,ja,val) &
         &  bind(c,name="d_CSRGDevice2Host") result(res)
      use iso_c_binding
      import  d_Cmat
      type(d_Cmat)          :: Mat
      integer(c_int), value :: m,n,nz
      integer(c_int)        :: irp(*), ja(*)
      real(c_double)        :: val(*)
      integer(c_int)        :: res
    end function d_CSRGDevice2Host
  end interface
      
interface HYBGDeviceAlloc
   function s_HYBGDeviceAlloc(Mat,nr,nc,nz) &
          & bind(c,name="s_HYBGDeviceAlloc") result(res)
       use iso_c_binding
       import  s_hmat
       type(s_Hmat)          :: Mat
       integer(c_int), value :: nr, nc, nz
       integer(c_int)        :: res
     end function s_HYBGDeviceAlloc
     function d_HYBGDeviceAlloc(Mat,nr,nc,nz) &
          & bind(c,name="d_HYBGDeviceAlloc") result(res)
       use iso_c_binding
       import  d_hmat
       type(d_Hmat)          :: Mat
       integer(c_int), value :: nr, nc, nz
       integer(c_int)        :: res
     end function d_HYBGDeviceAlloc
  end interface HYBGDeviceAlloc
  
  interface HYBGDeviceFree
     function s_HYBGDeviceFree(Mat) &
          & bind(c,name="s_HYBGDeviceFree") result(res)
       use iso_c_binding
       import  s_Hmat
       type(s_Hmat)   :: Mat
       integer(c_int) :: res
     end function s_HYBGDeviceFree
     function d_HYBGDeviceFree(Mat) &
          & bind(c,name="d_HYBGDeviceFree") result(res)
       use iso_c_binding
       import  d_Hmat
       type(d_Hmat)   :: Mat
       integer(c_int) :: res
     end function d_HYBGDeviceFree
  end interface HYBGDeviceFree

  interface HYBGDeviceSetMatType 
     function s_HYBGDeviceSetMatType(Mat,type) &
          & bind(c,name="s_HYBGDeviceSetMatType") result(res)
       use iso_c_binding
       import  s_Hmat
       type(s_Hmat)          :: Mat
       integer(c_int),value  :: type
       integer(c_int)        :: res
     end function s_HYBGDeviceSetMatType
     function d_HYBGDeviceSetMatType(Mat,type) &
          & bind(c,name="d_HYBGDeviceSetMatType") result(res)
       use iso_c_binding
       import  d_Hmat
       type(d_Hmat)          :: Mat
       integer(c_int),value  :: type
       integer(c_int)        :: res
     end function d_HYBGDeviceSetMatType
  end interface HYBGDeviceSetMatType

  interface HYBGDeviceSetMatFillMode
     function s_HYBGDeviceSetMatFillMode(Mat,type) &
          & bind(c,name="s_HYBGDeviceSetMatFillMode") result(res)
       use iso_c_binding
       import  s_Hmat
       type(s_Hmat)          :: Mat
       integer(c_int),value  :: type
       integer(c_int)        :: res
     end function s_HYBGDeviceSetMatFillMode
     function d_HYBGDeviceSetMatFillMode(Mat,type) &
          & bind(c,name="d_HYBGDeviceSetMatFillMode") result(res)
       use iso_c_binding
       import  d_Hmat
       type(d_Hmat)          :: Mat
       integer(c_int),value  :: type
       integer(c_int)        :: res
     end function d_HYBGDeviceSetMatFillMode
  end interface HYBGDeviceSetMatFillMode

  interface HYBGDeviceSetMatDiagType
     function s_HYBGDeviceSetMatDiagType(Mat,type) &
          & bind(c,name="s_HYBGDeviceSetMatDiagType") result(res)
       use iso_c_binding
       import  s_Hmat
       type(s_Hmat)          :: Mat
       integer(c_int),value  :: type
       integer(c_int)        :: res
     end function s_HYBGDeviceSetMatDiagType
     function d_HYBGDeviceSetMatDiagType(Mat,type) &
          & bind(c,name="d_HYBGDeviceSetMatDiagType") result(res)
       use iso_c_binding
       import  d_Hmat
       type(d_Hmat)          :: Mat
       integer(c_int),value  :: type
       integer(c_int)        :: res
     end function d_HYBGDeviceSetMatDiagType
  end interface HYBGDeviceSetMatDiagType
    
  interface HYBGDeviceSetMatIndexBase
     function s_HYBGDeviceSetMatIndexBase(Mat,type) &
         & bind(c,name="s_HYBGDeviceSetMatIndexBase") result(res)
       use iso_c_binding
       import  s_Hmat
       type(s_Hmat)          :: Mat
       integer(c_int),value  :: type
       integer(c_int)        :: res
     end function s_HYBGDeviceSetMatIndexBase
     function d_HYBGDeviceSetMatIndexBase(Mat,type) &
         & bind(c,name="d_HYBGDeviceSetMatIndexBase") result(res)
       use iso_c_binding
       import  d_Hmat
       type(d_Hmat)          :: Mat
       integer(c_int),value  :: type
       integer(c_int)        :: res
     end function d_HYBGDeviceSetMatIndexBase
  end interface HYBGDeviceSetMatIndexBase
  
  interface HYBGDeviceHybsmAnalysis
    function s_HYBGDeviceHybsmAnalysis(Mat) &
         & bind(c,name="s_HYBGDeviceHybsmAnalysis") result(res)
      use iso_c_binding
      import  s_Hmat
      type(s_Hmat)          :: Mat
      integer(c_int)        :: res
    end function s_HYBGDeviceHybsmAnalysis
     function d_HYBGDeviceHybsmAnalysis(Mat) &
         & bind(c,name="d_HYBGDeviceHybsmAnalysis") result(res)
      use iso_c_binding
      import  d_Hmat
      type(d_Hmat)          :: Mat
      integer(c_int)        :: res
    end function d_HYBGDeviceHybsmAnalysis
 end interface HYBGDeviceHybsmAnalysis

 interface spsvHYBGDevice
    function s_spsvHYBGDevice(Mat,alpha,x,beta,y) &
         &  bind(c,name="s_spsvHYBGDevice") result(res)
      use iso_c_binding
      import  s_Hmat
      type(s_Hmat)          :: Mat
      type(c_ptr), value    :: x
      type(c_ptr), value    :: y
      real(c_float), value  :: alpha,beta
      integer(c_int)        :: res
    end function s_spsvHYBGDevice
    function d_spsvHYBGDevice(Mat,alpha,x,beta,y) &
         &  bind(c,name="d_spsvHYBGDevice") result(res)
      use iso_c_binding
      import  d_Hmat
      type(d_Hmat)          :: Mat
      type(c_ptr), value    :: x
      type(c_ptr), value    :: y
      real(c_double), value :: alpha,beta
      integer(c_int)        :: res
    end function d_spsvHYBGDevice
 end interface spsvHYBGDevice

 interface spmvHYBGDevice
    function s_spmvHYBGDevice(Mat,alpha,x,beta,y) &
         &  bind(c,name="s_spmvHYBGDevice") result(res)
      use iso_c_binding
      import  s_Hmat
      type(s_Hmat)          :: Mat
      type(c_ptr), value    :: x
      type(c_ptr), value    :: y
      real(c_float), value  :: alpha,beta
      integer(c_int)        :: res
    end function s_spmvHYBGDevice
    function d_spmvHYBGDevice(Mat,alpha,x,beta,y) &
         &  bind(c,name="d_spmvHYBGDevice") result(res)
      use iso_c_binding
      import  d_Hmat
      type(d_Hmat)          :: Mat
      type(c_ptr), value    :: x
      type(c_ptr), value    :: y
      real(c_double), value :: alpha,beta
      integer(c_int)        :: res
    end function d_spmvHYBGDevice
 end interface spmvHYBGDevice
 
  interface HYBGHost2Device
     function s_HYBGHost2Device(Mat,m,n,nz,irp,ja,val) &
          &  bind(c,name="s_HYBGHost2Device") result(res)
       use iso_c_binding
       import  s_Hmat
       type(s_Hmat)          :: Mat
       integer(c_int), value :: m,n,nz
       integer(c_int)        :: irp(*), ja(*)
       real(c_float)         :: val(*)
       integer(c_int)        :: res
     end function s_HYBGHost2Device
     function d_HYBGHost2Device(Mat,m,n,nz,irp,ja,val) &
          &  bind(c,name="d_HYBGHost2Device") result(res)
       use iso_c_binding
       import  d_Hmat
       type(d_Hmat)          :: Mat
       integer(c_int), value :: m,n,nz
       integer(c_int)        :: irp(*), ja(*)
       real(c_double)        :: val(*)
       integer(c_int)        :: res
     end function d_HYBGHost2Device
  end interface HYBGHost2Device

contains
  
  function initFcusparse() result(res)
    implicit none 
    integer(c_int) :: res
    if (c_associated(cusparse_context)) then 
      res = cusparse_status_success
    else
      res = FcusparseCreate(cusparse_context)
    end if
  end function initFcusparse

  function closeFcusparse() result(res)
    implicit none 
    integer(c_int) :: res
    if (c_associated(cusparse_context)) then 
      res = FcusparseDestroy(cusparse_context)
    else
      res = cusparse_status_success
    end if
  end function closeFcusparse

#endif

end module cusparse_mod
#endif
